# horus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-12-threads-comments.md
scripts/: probe_find_text.py  probe_inspect.py  probe_ssr_extract.py  probe_threads_all.py  probe_threads_comments.py  test_comments_direct.py
src/horus/: cli.py  config.py  models.py
src/horus/adapters/: __init__.py  base.py  ddg.py  facebook.py  threads.py  web.py
src/horus/core/: browser.py  scraper.py  storage.py
src/horus/serve/: app.py  crawler_manager.py  deps.py
src/horus/serve/routes/: crawl.py  items.py  pages.py  stats.py
src/horus/serve/templates/: base.html  crawl.html  index.html  items.html  pages.html
src/horus/serve/templates/partials/: item_list.html  job_list.html  page_list.html
tests/: conftest.py  test_cli_comments.py  test_scraper_comments.py  test_storage.py
tests/adapters/: test_ddg_adapter.py  test_threads_adapter.py  test_web_adapter.py
tests/serve/: conftest.py  test_crawl_route.py  test_items_route.py  test_pages_route.py  test_stats_route.py
