[project]
name = "horus"
version = "0.1.0"
description = "Universal browser crawler framework with pluggable site adapters"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "playwright>=1.49",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "markdownify>=1.2.2",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "jinja2>=3.1.6",
]

[project.scripts]
horus = "horus.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.9",
    "bandit>=1.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/horus"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.bandit]
# B101: assert — internal invariants, not user input
# B110: try/except/pass — intentional for non-fatal errors
# B311: random — scroll jitter, not security
skips = ["B101", "B110", "B311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
